correct _preloader : supprim overflow : show

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -479,13 +479,12 @@ button {
   width: 100%;
   padding-top: 20%;
   position: fixed;
-  overflow: show;
   top: 0;
   opacity: 1;
   z-index: -9999;
   animation: preload 3000ms;
 }
-.load__container :before {
+.load__container:before {
   content: "";
   display: block;
   position: fixed;
@@ -494,6 +493,9 @@ button {
   width: 100%;
   height: 100%;
   opacity: 0.4;
+}
+.load__icon {
+  color: #99E2D0;
 }
 .load__icon_colour {
   color: #99E2D0;
